--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -14,6 +14,7 @@
 	--breakpoint-md: 768px;
 	--breakpoint-lg: 1024px;
 	--breakpoint-xl: 1280px;
+	--color-primary: #f9a826;
 	font-family: var(--font-family-poppins);
 }
 
@@ -28,6 +29,11 @@ body {
 *::before,
 *::after {
 	box-sizing: border-box;
+}
+
+*:focus-visible {
+	outline: 0;
+	box-shadow: 0 0 0 3px var(--color-primary);
 }
 
 a,
